# personality

./: .gitignore  DEMO.md  PERSONALITY.md  README.md  embedder.py  embedding_test.py  embedding_test2.py  emotions.py  index.html  package-lock.json  package.json  personas.py  quiz1.txt  quiz_full.txt  site.conf.j2  tailwind.config.js  vite.config.js
ansible/: deploy.yml  letsencrypt.yml  setup.yml
datasets/: README.md  personality.csv
datasets/16PF/: PF16 Stats.ipynb  analyze.py  cholcov.npy  cov.npy  generate.py  questions.txt  test_npyjs.js  test_stdlib.js  words.txt
datasets/compatibility/: bgr.txt  pt.txt  wh.txt
datasets/okcupid/: csvtest.py  load_data.py  question_data.csv  synthetic.py  torchtest.py
rustserver/: Cargo.toml  embedder.py
rustserver/src/: main.rs  pfcache.rs
server/: embedding_server.py  quicktry.js  server.js  summarize.py  test.txt  test_pythonia.js
server/tests/: backstory.md  chatgpt_func_test.txt  chatgpt_func_test_replies.txt  chatgpt_func_test_replies2.txt  dialog.txt  dialog2.txt  favorites.md  getfacts.txt  partial-json-parser.js  personality_test.txt  rewrite.txt  summary.txt  summary2.txt  test.md  test.txt  test_json.js  test_result.md  traits_all_uniq.txt
src/: App.vue  Chat.vue  Conversation.vue  Demo.vue  Hero.vue  KeywordCloud.vue  Likert.vue  NotFound.vue  Quiz.vue  TextareaGrow.vue  TokenDemo.vue  cholcov.json  config.js  main.css
