[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pickledb = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.19.1", features = ["auto-initialize"] }
postcard = { version = "1.0.6", features = ["use-std"] }
